--- a/Module 4 FlexBox.html
+++ b/Module 4 FlexBox.html
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flex Box</title>
     <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
         .tryOneThing {
             display: flex;
             justify-content: center;
             height: 40px;
             width: 100%;
-            background-color: aquamarine;
+            align-items: center;
+            background-color: rgb(255, 225, 127);
             /* line-height: 100px; */
             
         }
@@ -19,7 +24,8 @@
             justify-content: center;
             height: 40px;
             width: 100%;
-            background-color: aquamarine;
+            background-color: rgb(129, 127, 255);
+                        align-items: center;
             /* line-height: 100px; */
         }
     </style>
