Card Desing Done as assingment

--- a/Module 4 Tabe.html
+++ b/Module 4 Tabe.html
@@ -23,6 +23,10 @@
             padding: 15px 25px;
             color: greenyellow;
         }
+        #uselessTD{
+            visibility: hidden;
+            border: none;
+        }
     </style>
 </head>
 <body>
@@ -63,7 +67,8 @@
             <td> 500</td>
         </tr>
     </tbody>
-        <td colspan="3">Total Friend: 4</td>
+        <td id="uselessTD"></td>
+        <td colspan="2">Total Friend: 4</td>
     <tfoot>
 
     </tfoot>
